CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

# install edj
ADD_CUSTOM_TARGET(transit.edj
		COMMAND edje_cc -id ${CMAKE_CURRENT_SOURCE_DIR}/images ${EDJE_CFLAGS}
		${CMAKE_CURRENT_SOURCE_DIR}/transit.edc transit.edj
		DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/transit.edc
)
ADD_DEPENDENCIES(${PROJECT_NAME} transit.edj)
INSTALL(FILES transit.edj DESTINATION ${EDJDIR})
INSTALL(FILES icon_07.png DESTINATION ${RESDIR}/images)
INSTALL(FILES icon_08.png DESTINATION ${RESDIR}/images)
