CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

# install edj
ADD_CUSTOM_TARGET(hello.edj
		COMMAND edje_cc -id ${CMAKE_CURRENT_SOURCE_DIR}/images ${EDJE_CFLAGS}
		${CMAKE_CURRENT_SOURCE_DIR}/hello.edc hello.edj
		DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/hello.edc
)
ADD_DEPENDENCIES(${PROJECT_NAME} hello.edj)
INSTALL(FILES hello.edj DESTINATION ${EDJDIR})
